
  [ Marco Rodrigues ]
  * etc/default/apport: Replace the old init.d force_start command by
    the Upstart one.
  * debian/apport.upstart: If $force_start=1 is given then run the job.
  * debian/local/apport-collect: Don't collect information if bug is a
    duplicate. (LP: #471429)

  [ Martin Pitt ]
  * debian/control: Update Vcs-Bzr: for lucid branch.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 23 Oct 2009 21:28:48 +0100

apport (1.9.3-0ubuntu4) karmic; urgency=low

  * etc/default/apport: Disable Apport for final Karmic.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Oct 2009 22:41:34 +0200

apport (1.9.3-0ubuntu3) karmic; urgency=low

  * apport/crash_db/launchpad.py: Increase the number of files available 
    for searching with bug patterns.

 -- Brian Murray <brian@ubuntu.com>  Sun, 18 Oct 2009 12:38:38 +0200

apport (1.9.3-0ubuntu2) karmic; urgency=low

  * debian/local/apport-collect: Instantiate Launchpad crash database with
    "distro = ubuntu", to satisfy an assertion introduced in the previous
    release. (LP: #451838)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 15 Oct 2009 21:12:21 +0200

apport (1.9.3-0ubuntu1) karmic; urgency=low

  * New upstream bug fix release:
    - hookutils.py: Fix error codes from "comm", thanks to Brian Murray.
      (LP: #414194)
    - general-hooks/generic.py: Catch xkbcomp error messages. (LP: #431807)
    - launchpad.py: Assert that we have exactly one of "distro" or "project"
      option.
    - doc/crashdb-conf.txt: Improve documentation of crash database options.
    - apport-gtk: Make Cancel/Send buttons focusable. Thanks to Marco
      Rodrigues. (LP: #447780)
    - Drop handling of the APPORT_REPORT_THIRDPARTY environment variable and
      "thirdparty" configuration file option. This has never been documented,
      and conceptually does not work. There is a proper mechanism for this in
      place now, e. g. launchpad.py's "project" option.